--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -15,5 +15,5 @@ jobs:
         ruby-version: 3.3.0
         bundler-cache: true
     - run: bundle install
-    - run: rails db:create db:migrate
-    - run: rails test
+    - run: ./bin/rails db:create db:migrate
+    - run: ./bin/rails test
