--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -16,4 +16,4 @@ jobs:
         bundler-cache: true
     - run: bundle install
     - run: ./bin/rails db:create db:migrate
-    - run: ./bin/rails test
+    - run: ./bin/rails test:all
